# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.393 2005/11/21 23:16:41 wolf31o2 Exp $

  21 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/create-iso.sh:
  Changed check for /boot/isolinux.bin to /isolinux/isolinux.bin

  21 Nov 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/bootloader-setup.sh, targets/support/functions.sh:
  Fix pegasos kernelz rename;fix default_append_line to not include initrd= as
  too many arches dont use it by default, test for an initrd in the yaboot
  config.

  18 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix split error if use is specified

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -livecd/cdtar/palo-1.2_pre20030630-cdtar.tar.bz2,
  +livecd/cdtar/palo-1.5_pre20040515-cdtar.tar.bz2:
  Updated palo version from catalyst 1.x for HPPA.

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Removing for loop for grub on amd64/x86 as it was totally useless.

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Remove vga= line for PPC.

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  PPC yaboot.conf fix from Lars Weiler <pylon@gentoo.org>.

  18 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0_pre20051101-slot.patch, catalyst:
  Removing slot patch as it probably didn't belong here anyway, and updating
  version stamp to 2.0_pre20051118.

  18 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
  targets/support/bootloader-setup.sh:
  fix the bootloader script for isolinux so that it actually makes a cfg file,
  remove extra unneeded catalyst aborting print statement, reorganize rm code
  to make sure is splits properly and is an array even from the cmdline
