@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.99 2005/11/18 15:39:32 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/catalyst,v 1.100 2005/11/22 15:37:03 wolf31o2 Exp $
 
 # Maintained in full by:
 # Eric Edgar <rocket@gentoo.org>
@@ -10,7 +10,7 @@
 import os,sys,imp,string,getopt
 import pdb
 __maintainer__="Chris Gianelloni <wolf31o2@gentoo.org>"
-__version__="2.0_pre20051118"
+__version__="2.0_pre20051122"
 
 conf_values={}
 
